# tapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: example.py  tapi.yml
src/tapi/api/: base_api.py  constants.py  logic.py
src/tapi/cli/run/: command.py
tests/api/: sample_functions.py  test_base_api.py  test_logic.py
tests/cli/: test_cli_run.py
tests/cli/files/: invalid-config.yml  sample.py  sample.yml
