[tool.poetry]
name = "tapi"
version = "0.1.0"
description = "Tecian no-code API framework. Create REST interfaces from YAML configs"
authors = ["PSauerborn <pascal.sauerborn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
typer = "^0.6.1"
PyYAML = "^6.0"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
